--- a/ZooBazaar-SAIA-Web/wwwroot/css/site.css
+++ b/ZooBazaar-SAIA-Web/wwwroot/css/site.css
@@ -1,71 +1,72 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
-}
-
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
-}
-
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
+﻿* {
+    box-sizing: border-box;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 16px;
-  }
-}
-
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    display: grid;
+    grid-gap: 20px;
+    min-height: 100vh;
+    padding: 20px;
+    grid-template-areas:
+        'header'
+        'nav'
+        'content'
+        'footer';
+    grid-template-rows: 10vw 50px auto 50px;
+    background-color: #6BCEFF;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+
+header {
+    grid-area: header;
+}
+
+nav {
+    grid-area: nav;
+    display: flex;
+    background-color: #1767B3;
+    color: white;
+    font-size: 20px;
+    border-radius: 20px;
+}
+
+.subtitle {
+    flex-basis: 80vw;
+    padding: 13px 0px 0px 50px;
+    font-size: 20px;
+}
+
+.navbutton {
+    flex-basis: 10vw;
+    text-align: center;
+    padding: 13px 20px 0px 20px;
+    font-size: 20px;
+    padding: 10px;
+    background-color: #2799E6;
+}
+
+.content {
+    grid-area: content;
+    padding: 20px;
+}
+
+footer {
+    grid-area: footer;
+    background-color: #1767B3;
+    color: white;
+    font-size: 14px;
+    text-align: center;
+    padding-top: 15px;
+    border-radius: 20px;
+}
+
+h1 {
+    font-family: monospace;
+    font-size: 10vw;
+    font-weight: normal;
+    text-align: center;
+    color: #114466;
 }
