Employee profile (needs login

--- a/ZooBazaar-SAIA-Web/Pages/Shared/_Layout.cshtml
+++ b/ZooBazaar-SAIA-Web/Pages/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
             Employee web application
         </p>
         <a asp-page="Login" class="navbutton">Login</a>
+        <a asp-page="Profile" class="navbutton">Profile</a>
     </nav>
     <div class="content">
         @RenderBody()
