--- a/ZooBazaar-SAIA-Web/wwwroot/css/site.css
+++ b/ZooBazaar-SAIA-Web/wwwroot/css/site.css
@@ -6,8 +6,11 @@
     padding: 0;
 }
 
-body {
+
+    body {
     display: grid;
+    height:100%;
+    width:100%;
     grid-gap: 20px;
     min-height: 100vh;
     padding: 20px;
@@ -19,6 +22,10 @@ body {
     grid-template-rows: 10vw 50px auto 50px;
     background-color: #6BCEFF;
 }
+
+
+
+
 
 header {
     grid-area: header;
@@ -70,3 +77,122 @@ h1 {
     text-align: center;
     color: #114466;
 }
+
+.pagination {
+    margin-top: 40px;
+    text-align: left;
+    width: 92%;
+    margin-left: 80px;
+}
+
+table {
+    width: 60%;
+    border-collapse: collapse;
+    margin-left: 100px;
+    margin-top: 50px;
+}
+
+    table th {
+        background: #333;
+        color: snow;
+    }
+
+    table td {
+        background: snow;
+    }
+
+#page_layout {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: auto 600px;
+    grid-template-rows: auto;
+}
+
+#header_container, #footer_container, #table_container, #list_container {
+    box-sizing: border-box;
+}
+
+.btn {
+    border-radius: 2px;
+    cursor: pointer;
+    justify-content: space-between;
+    text-decoration: none;
+    width: 40% !important;
+    background: #333333 !important;
+    color: white !important;
+    margin-bottom: 6px;
+}
+
+    .btn :hover {
+        background-color: rgb(33, 104, 170);
+    }
+
+#btnSave {
+    background-color: #333333;
+    color: white;
+    padding: 10px 16px;
+    margin: 8px 0;
+    border-radius: 2px;
+    cursor: pointer;
+    width: 40%;
+    margin-left: 100px;
+}
+
+.wrapper {
+    width: 400px;
+    background: #fff;
+    border-radius: 3px;
+    padding: 30px;
+    margin: 50px auto 70px;
+}
+
+    .wrapper .title {
+        font-weight: 700;
+        text-align: center;
+        font-size: 24px;
+        padding-bottom: 30px;
+    }
+
+.table-fixed {
+    margin-left: 8rem;
+    margin-top: 6rem;
+    float: left;
+}
+
+    .table-fixed thead, .table-fixed thead > th {
+        background: #333333;
+        color: #fff;
+    }
+
+    .table-fixed tbody tr td {
+        background: #fff;
+    }
+
+    .table-fixed > thead > tr > th {
+        border: 0 !important;
+    }
+
+    .table-fixed > tbody > tr > td:last-child {
+        border-right: 0;
+    }
+
+    .table-fixed tbody td, .table-fixed thead > tr > th {
+        font-size: 14px;
+        padding-left: 60px !important;
+    }
+
+    .table-fixed .col {
+        width: 40%;
+    }
+
+    .table-fixed tbody {
+        display: block;
+        height: 300px;
+        overflow-y: auto;
+    }
+
+    .table-fixed tr {
+        display: block;
+    }
+
