--- a/ZooBazaar-SAIA-Web/wwwroot/css/site.css
+++ b/ZooBazaar-SAIA-Web/wwwroot/css/site.css
@@ -168,7 +168,7 @@ table {
     justify-content: space-between;
     text-decoration: none;
     width: 40% !important;
-    background: #333333 !important;
+    background: #333333;
     color: white !important;
     margin-bottom: 6px;
 }
@@ -245,3 +245,79 @@ table {
         display: block;
     }
 
+
+
+form {
+    width: 50%;
+    margin: 8%;
+}
+
+.form-container {
+    font-size: 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-content {
+    width: 80%;
+    display: block;
+    text-align: left;
+    margin: 3px;
+}
+
+.login-form .button-container {
+    text-align: center;
+    width: 60%;
+    display: flex;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 60%;
+}
+
+input,
+input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+.button-container .btn-primary {
+    width: 80%;
+    border: none;
+    cursor: pointer;
+    padding: 14px 20px;
+    border-radius: 10px;
+    font-size: 22px;
+    background-color: #1767B3;
+    margin-left: auto;
+    margin-right: auto;
+    width: 120px;
+    justify-content: space-between;
+}
+
+.form-button:hover {
+    opacity: 0.8;
+}
+
+.log-out-form {
+    margin: 0;
+    display: inline;
+    border: none;
+}
+
+.log-out-form button {
+    background: none;
+    border: none
+}
+
+.text-danger {
+    color: red;
+}
