--- a/ZooBazaar-SAIA-Web/wwwroot/css/site.css
+++ b/ZooBazaar-SAIA-Web/wwwroot/css/site.css
@@ -126,6 +126,14 @@ h1 {
         border-bottom:4px solid #000;
         width: 100%;
     }
+    .Profile > input {
+        visibility: hidden;
+        width: 0px;
+        height: 0px;
+        margin: 0;
+        border: 0;
+        display: contents;
+    }
 
 .pagination {
     margin-top: 40px;
