--- a/ZooBazaar-SAIA-Web/Pages/Shared/_Layout.cshtml
+++ b/ZooBazaar-SAIA-Web/Pages/Shared/_Layout.cshtml
@@ -17,16 +17,14 @@
             Employee web application
         </p>
 
-        @if (User.Identity.IsAuthenticated)
-        {
+        @if (User.Identity.IsAuthenticated) {
             <a asp-page="Schedule" class="navbutton">Schedule</a>
             <a asp-page="Profile" class="navbutton">Profile</a>
+            <a asp-page="Messages" class="navbutton">Messages</a>
             <form class="log-out-form" method="post" asp-page="Login" asp-page-handler="Logout">
                 <button type="submit" class="navbutton log-out-button"><a>Sign out</a></button>
             </form>
-        }
-        else
-        {
+        } else {
             <a asp-area="" asp-page="Login" class="navbutton">Login</a>
         }
 
