--- a/ZooBazaar-SAIA-Web/wwwroot/css/site.css
+++ b/ZooBazaar-SAIA-Web/wwwroot/css/site.css
@@ -259,6 +259,10 @@ form {
     width: 50%;
     margin: 8%;
 }
+.message-form {
+    margin: 30px;
+    width: 60%;
+}
 
 .form-container {
     font-size: 20px;
@@ -328,4 +332,13 @@ input[type=password] {
 
 .text-danger {
     color: red;
+}
+.message {
+    min-width: 35%;
+    margin: 10px;
+    margin-left: 30px;
+}
+.flex {
+    display: flex;
+    flex-direction: column;
 }
