added friend animals, envoronment check, added id cookie

--- a/ZooBazaar-SAIA-Web/wwwroot/css/site.css
+++ b/ZooBazaar-SAIA-Web/wwwroot/css/site.css
@@ -291,8 +291,7 @@ form {
     width: 60%;
 }
 
-input,
-input[type=password] {
+.login-form input {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
