--- a/ZooBazaar-SAIA-Web/Pages/Schedule.cshtml
+++ b/ZooBazaar-SAIA-Web/Pages/Schedule.cshtml
@@ -37,12 +37,15 @@
 
         </div>
         <div class="pagination">
-            <form method="post" asp-page-handler="Reset">
-                <button class="btn"> Show </button>
-            </form>
+
             <form method="post" asp-page-handler="Previous">
                 <button class="btn"> Previous Month </button>
             </form>
+
+            <form method="post" asp-page-handler="Reset">
+                <button class="btn"> Current Month </button>
+            </form>
+
             <form method="post" asp-page-handler="Next">
                 <button class="btn"> Next Month </button>
             </form>
@@ -56,7 +59,7 @@
         <div float="left" class="wrapper">
             <div class="checkbox_container">
                 <div class="title">Unavailable for work shifts</div>
-                <table float="left" class="col-xs-7 table-bordered table-striped table-condensed table-fixed">
+                <table class="col-xs-7 table-bordered table-striped table-condensed table-fixed">
 
 
                     <thead>
@@ -74,7 +77,7 @@
 
                             <tr>
                                 <td class="col">@item.EmployeeId</td>
-                                <td class="col">@item.Date</td>
+                                <td class="col">@item.UnavailableDay</td>
                             </tr>
                         }
                     </tbody>
