--- a/ZooBazaar-SAIA-Web/wwwroot/css/site.css
+++ b/ZooBazaar-SAIA-Web/wwwroot/css/site.css
@@ -135,15 +135,16 @@ h1 {
         display: contents;
     }
 
-.pagination {
-    margin-top: 40px;
-    text-align: left;
-    width: 92%;
-    margin-left: 80px;
+/*.pagination {
+    margin-top: 40px;*/
+    /*text-align: left;*/
+    /*display: inline-block;
+    width: 92%;*/
+    margin-left: 20px;
 }
 
-table {
-    width: 60%;
+/*.table {
+    width: 300px;
     border-collapse: collapse;
     margin-left: 100px;
     margin-top: 50px;
@@ -156,17 +157,32 @@ table {
 
     table td {
         background: snow;
-    }
+        margin-left: 100px;
+    }*/
 
-#page_layout {
+table{
+    margin-right:30px;
+}
+
+.page_layout {
     width: 100%;
     height: 100%;
     display: grid;
+    
     grid-template-columns: auto 600px;
     grid-template-rows: auto;
 }
 
-#header_container, #footer_container, #table_container, #list_container {
+.inline{
+    display:inline-block;
+}
+
+.btn_schedule {
+    width: 300px;
+    border-radius: 2px;
+}
+
+#header_container, #footer_container, .table_container, .list_container {
     box-sizing: border-box;
 }
 
@@ -212,9 +228,11 @@ table {
     }
 
 .table-fixed {
-    margin-left: 8rem;
+   /* margin-right:40px;
     margin-top: 6rem;
-    float: left;
+    float: left;*/
+
+   margin:0 auto;
 }
 
     .table-fixed thead, .table-fixed thead > th {
@@ -340,4 +358,8 @@ form {
 .flex {
     display: flex;
     flex-direction: column;
+}
+
+.col{
+    /*margin-left:100px;*/
 }
