small fix to css, added button highlighting, and coloring for pressed buttons

--- a/ZooBazaar-SAIA-Web/Pages/Shared/_Layout.cshtml
+++ b/ZooBazaar-SAIA-Web/Pages/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             <a asp-page="Profile" class="navbutton">Profile</a>
             <a asp-page="Messages" class="navbutton">Messages</a>
             <form class="log-out-form" method="post" asp-page="Login" asp-page-handler="Logout">
-                <button type="submit" class="navbutton log-out-button"><a>Sign out</a></button>
+                <button type="submit"class="navbutton log-out-button">Sign out</button>
             </form>
         } else {
             <a asp-area="" asp-page="Login" class="navbutton">Login</a>
