login page buttons fix

--- a/ZooBazaar-SAIA-Web/wwwroot/css/site.css
+++ b/ZooBazaar-SAIA-Web/wwwroot/css/site.css
@@ -352,14 +352,13 @@ h1 {
 
 .login-form .button-container {
     text-align: center;
-    width: 60%;
     display: flex;
     color: white;
-    padding: 14px 20px;
+    padding: 7px 20px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
-    width: 60%;
+    width: 100%;
 }
 
 .login-form input {
@@ -372,10 +371,9 @@ h1 {
 }
 
 .button-container .btn-primary {
-    width: 80%;
     border: none;
     cursor: pointer;
-    padding: 14px 20px;
+    padding: 5px 10px;
     border-radius: 10px;
     font-size: 22px;
     background-color: #1767B3;
@@ -383,6 +381,8 @@ h1 {
     margin-right: auto;
     width: 120px;
     justify-content: space-between;
+    text-align: center;
+    height: auto;
 }
 
 .form-button:hover {
